--- a/package.json
+++ b/package.json
@@ -36,11 +36,6 @@
     "@glint/template": "^1.4.0",
     "@tsconfig/ember": "^3.0.8",
     "@types/ember": "^4.0.11",
-    "@types/ember-data": "^4.4.16",
-    "@types/ember-data__adapter": "^4.0.6",
-    "@types/ember-data__model": "^4.0.5",
-    "@types/ember-data__serializer": "^4.0.6",
-    "@types/ember-data__store": "^4.0.7",
     "@types/ember__application": "^4.0.11",
     "@types/ember__array": "^4.0.10",
     "@types/ember__component": "^4.0.22",
@@ -61,6 +56,11 @@
     "@types/ember__template": "^4.0.7",
     "@types/ember__test": "^4.0.6",
     "@types/ember__utils": "^4.0.7",
+    "@types/ember-data": "^4.4.16",
+    "@types/ember-data__adapter": "^4.0.6",
+    "@types/ember-data__model": "^4.0.5",
+    "@types/ember-data__serializer": "^4.0.6",
+    "@types/ember-data__store": "^4.0.7",
     "@types/qunit": "^2.19.10",
     "@types/rsvp": "^4.0.9",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
@@ -84,7 +84,9 @@
     "ember-page-title": "^8.2.3",
     "ember-qunit": "^8.1.0",
     "ember-resolver": "^11.0.1",
+    "ember-route-template": "^1.0.3",
     "ember-source": "~5.11.0",
+    "ember-template-imports": "^4.1.1",
     "ember-template-lint": "^5.13.0",
     "ember-welcome-page": "^7.0.2",
     "eslint": "^8.57.0",
